add styled header and separate component for product card and list

--- a/.gitignore
+++ b/.gitignore
@@ -476,3 +476,10 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 ecommerce/appsettings.json
+store/package.json
+store/package-lock.json
+ecommerce/store.db-wal
+ecommerce/store.db-shm
+store/package.json
+store/package-lock.json
+store/package-lock.json
